# RandomProj

Age Response/: .cproject  .project  main.cpp
Coding/: test.c  test.h
Introductory Stuff/: .cproject  .project
Mean, Median Mode/: .cproject  .project  shurjo.cpp  web.cpp  web2.cpp
Pulolo 3pi/: .cproject  .project
airgorun/: .cproject  .hgignore  .project  Makefile  ecommand.sh  main.rc
chibi_kenshin-clone/: block.py  block_variable.py  camera.py  editor.py  editor_menu.py  environment_editor.py  game.py  ideas.txt  input_mode.py  main.py  player.py  rectangle.py  util.py
spacenomad/: .cproject  .dir-locals.el  .hgignore  Makefile.am  README.md  app.manifest  configure.ac  ecommand.sh  mainres.rc  p-xcf2png.sh
spacenomad/.hg/: dirstate  hgrc  undo.desc  undo.dirstate
spacenomad/.hg/cache/: branch2-served  tags
spacenomad/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
spacenomad/.hg/store/data/: _makefile.am.i  _makefile.i  _r_e_a_d_m_e.md.i  app.manifest.i  configure.ac.i  ecommand.sh.i  main.rc.i  mainres.rc.i  p-xcf2png.sh.i  ~2ecproject.i  ~2edir-locals.el.i  ~2ehgignore.i
spacenomad/.hg/store/data/images/: _a_i_r_g_o_r_u_n_f_i_n_a_l.xcf.i  cursor.xcf.i  favicon.ico.i  favicon.xcf.i  menu - _shortcut.lnk.i
spacenomad/.hg/store/data/images/_a_a_a_a_a_a_a_a_a_a_a_a_a_a_a_a_a_a_a/: menu.xcf.i  menu__detailed.xcf.i
spacenomad/.hg/store/data/images/astronaut/: gun__barrel.svg.i  space__suit.svg.i  space__suit__backup.svg.i
spacenomad/.hg/store/data/images/game/: _a_r_i_g_o _r_u_n _i_n _g_a_m_e.xcf.i
spacenomad/.hg/store/data/images/menu/: _b_l_u_e_f_i_r_e.xcf.d  _b_l_u_e_f_i_r_e.xcf.i  _y_e_l_l_o_w _f_i_r_e.xcf.d  _y_e_l_l_o_w _f_i_r_e.xcf.i  choose__bar.xcf.i  main.xcf.i
spacenomad/.hg/store/data/images/planet/: plain.xcf.i
spacenomad/.hg/store/data/images/projectiles/fire/: _untitled.xcf.i
spacenomad/.hg/store/data/images/projectiles/normal____bullet/: bullet.svg.i  trail.svg.i
spacenomad/.hg/store/data/images/star__field/: star__0.xcf.i  star__1.xcf.i  star__2.xcf.i
spacenomad/.hg/store/data/src/: block.cxx.i  block.hxx.i  brush__creation.cxx.i  brush__creation.hxx.i  camera.cxx.i  camera.hxx.i  field.cxx.i  field.hxx.i  game__mode.cxx.i  game__mode.hxx.i  main.cxx.i  main.hxx.i  menu__mode.cxx.i  menu__mode.hxx.i  mode.cxx.i  mode.hxx.i  object.cxx.i  object.hxx.i  object__block.cxx.i  object__block.hxx.i  object__field.cxx.i  object__field.hxx.i  planet.cxx.i  planet.hxx.i  planet__generation__mode.cxx.i  planet__generation__mode.hxx.i  player.cxx.i  player.hxx.i  projectile.cxx.i  projectile.hxx.i  sprite.exx.i  star__block.cxx.i  star__block.hxx.i  star__field.cxx.i  star__field.hxx.i  thread.hxx.i  universe.cxx.i  universe.hxx.i
spacenomad/.hg/store/data/src/planet__generation/: brush.cxx.i  brush.hxx.i  planet__generation__mode.cxx.i  planet__generation__mode.hxx.i  planet__generator.cxx.i  planet__generator.hxx.i  planet__type.cxx.i  planet__type.hxx.i
spacenomad/images/: cursor.xcf  favicon.xcf
spacenomad/images/menu/: choose_bar.xcf  main.xcf
spacenomad/images/planet/: plain.xcf
spacenomad/images/star_field/: star_0.xcf  star_1.xcf  star_2.xcf
spacenomad/src/: block.cxx  block.hxx  camera.cxx  camera.hxx  field.cxx  field.hxx  game_mode.cxx  game_mode.hxx  main.cxx  main.hxx  menu_mode.cxx  menu_mode.hxx  mode.hxx  object.cxx  object.hxx  object_block.cxx  object_block.hxx  object_field.cxx  object_field.hxx  planet.cxx  planet.hxx  player.cxx  player.hxx  sprite.cxx  sprite.hxx  star_block.cxx  star_block.hxx  star_field.cxx  star_field.hxx  universe.cxx  universe.hxx
spacenomad/src/planet_generation/: brush.cxx  brush.hxx  planet_generation_mode.cxx  planet_generation_mode.hxx  planet_generator.cxx  planet_generator.hxx  planet_type.cxx  planet_type.hxx
(+804 files in other folders)
